@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-06-21T00:57:34Z",
-  "count_outdated" : 257,
-  "uniques_outdated" : 190,
-  "count" : 258,
-  "uniques" : 191,
+  "timestamp" : "2025-07-02T00:59:23Z",
+  "count_outdated" : 258,
+  "uniques_outdated" : 191,
+  "count" : 259,
+  "uniques" : 192,
   "clones" : [
     {
-      "timestamp": "2025-06-15T00:00:00Z",
+      "timestamp": "2025-07-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
